--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-
-flask=1.1.2=pypi_0
-folium=0.12.1=pypi_0
-numpy=1.20.2=py39h6635163_0
-pandas=1.2.4=pypi_0
-requests=2.25.1=pypi_0
-
+flask==1.1.2
+gunicorn==20.1.0
+folium=0.12.1
+numpy==1.20.2
+pandas==1.2.4
